Add Dates, text to home page

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Lato:wght@300;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -10,6 +12,26 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.text {
+  color: #050315;
+}
+
+.background {
+  background-color: #FBFBFE;
+}
+
+.primary {
+  background-color: #2F27CE;
+}
+
+.secondary {
+  background-color: #DEDCFF;
+}
+
+.accent {
+  background-color: #433BFF;
 }
 
 li {
@@ -34,4 +56,75 @@ nav li {
 
 nav li:hover {
   background-color: white;
+}
+
+.logo {
+  border: 2px solid black;
+  margin: 1rem;
+  width: 5rem;
+  height: 5rem;
+  line-height: 5rem;
+  text-align: center;
+  vertical-align: middle;
+  border-radius: 50%;
+  padding: 1rem;
+  font-size: 0.8rem;
+}
+
+.home-top {
+  display: flex;
+}
+
+.home-links {
+  display: flex;
+  justify-content: space-evenly;
+  width: 80%;
+  margin: auto;
+  gap: 1rem;
+  padding: 0;
+}
+
+.home-link {
+  display: flex;
+  justify-content: center;
+  width: 9rem;
+  height: 9rem;
+  line-height: 9rem;
+  text-align: center;
+  vertical-align: middle;
+  border: 3px solid rgb(0, 0, 0);
+  border-radius: 50%;
+}
+
+.home-welcome {
+  width: 80%;
+  margin: 2rem auto;
+}
+
+.key-dates {
+  display: flex;
+  width: 80%;
+  margin: auto;
+  justify-content: space-evenly;
+}
+.key-date {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 1rem;
+  border: 2px solid rgb(0, 0, 0);
+  width: 30%;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+  align-items: center;
+}
+
+.d8 {
+  border: 2px solid rgb(0, 0, 0);
+  padding: 0rem;
+  border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+  text-align: center;
+  line-height: 1.8rem;
+  font-size: 1.3rem;
 }
