--- a/src/index.css
+++ b/src/index.css
@@ -128,3 +128,18 @@ nav li:hover {
   line-height: 1.8rem;
   font-size: 1.3rem;
 }
+
+.test-slider {
+  width: 80%;
+  margin: auto;
+  background-color: aqua;
+}
+.testimonial {
+  width: 80%;
+  margin: auto;
+}
+
+.t-message {
+  font-size: 1.5rem;
+  text-align: center;
+}
