--- a/src/index.css
+++ b/src/index.css
@@ -34,28 +34,48 @@ code {
   background-color: #433BFF;
 }
 
+.school-name {
+  margin-bottom: 0;
+}
+
+.motto {
+  margin-top: 0;
+}
+.title {
+  margin-left: 1rem;
+}
+
 li {
   list-style-type: none;
 }
 
 nav {
-  background-color: rgba(128, 128, 128, 0.432);
-  width: 40%;
-  height: 100vh;
+  position: absolute;
+  background-color: #edebe8;
+  width: 100%;
+  height: fit-content;
   margin: 0;
+  z-index: 10;
+}
+
+button {
+  margin: 1rem 0;
+  padding: 1rem;
+  border-radius: 50px;
 }
 
 nav ul {
-  width: 100%;
+  width: 90%;
+  padding: 0;
 }
 
 nav li {
-  padding: 1rem;
-  width: 100%;
+  padding: 1rem 0.5rem;
 }
 
 nav li:hover {
-  background-color: white;
+  border-bottom: 2px solid #ffffff;
+  padding: 1rem 0.5rem;
 }
 
 .logo {
@@ -99,6 +119,7 @@ nav li:hover {
 .home-welcome {
   width: 80%;
   margin: 2rem auto;
+  background-color: rgb(182,214,182);
 }
 
 .key-dates {
@@ -134,6 +155,7 @@ nav li:hover {
   margin: auto;
   background-color: aqua;
 }
+
 .testimonial {
   width: 80%;
   margin: auto;
@@ -142,4 +164,22 @@ nav li:hover {
 .t-message {
   font-size: 1.5rem;
   text-align: center;
+}
+
+.icons {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  margin: 1rem auto;
+}
+
+.icons > li {
+  filter: brightness(0);
+}
+
+.home-bottom {
+  display: flex;
+  width: 65%;
+  margin: auto;
+  font-size: smaller;
 }
